--- a/etenderfrontend/public/index.html
+++ b/etenderfrontend/public/index.html
@@ -14,18 +14,18 @@
     -->
     <!--
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    -->  
+    -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <style>
-      *{
-        font-family:"Roboto", sans-serif;
-        margin:0;
+      * {
+        font-family: "Roboto", sans-serif;
+        margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>E-Tender</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
